src/test/test-models/bad/continue1.stan
// tests correct value passed from transformed data
transformed data {
  int n;
  continue;
}
model {
}
